--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,9 +4,9 @@ karl package Changelog
 Next version
 -----------------
 
-- Fixed calendar printing on ux2 (ree)
+- Fixed calendar printing on ux2 (LP #904822)
 
-- Fixed the calendar popover to be clickable on ux2 (ree)
+- Fixed the calendar popover to be clickable on ux2 (LP ##1024000)
 
 
 3.88 (2012-06-06)
