--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -33,7 +33,7 @@ Unreleased
 
 - Fixed calendar printing on ux2 (LP #904822)
 
-- Fixed the calendar popover to be clickable on ux2 (LP ##1024000)
+- Fixed the calendar popover to be clickable on ux2 (LP #1024000)
 
 3.90 (2012-07-12)
 -----------------
