Only users with admin privileges on a reference manual can move sections.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,9 @@ karl package Changelog
 Unreleased
 ----------
 
+- Only users with admin privileges on a reference manual can move sections
+  up and down.
+
 - Return a 404 instead of General Error when someone visits /static/. (LP 
   #1038990)
 
