--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 karl package Changelog
 ======================
 
+Unreleased
+----------
+
+- Return a 405 Method Not Allowed response to all OPTIONS and PROPFIND requests.
+  (LP #1046967)
+
 3.95 (2012-09-05)
 -----------------
 
