--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 karl package Changelog
 ======================
 
+Unreleased
+----------
+
+- Fixed problem where a link inside a button on feeds would not work on some
+  browsers.
+
 3.96 (2012-09-06)
 -----------------
 
