--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 karl package Changelog
 ======================
 
+Unreleased
+----------
+
+- Added labels with filter type to edit filter forms in people directory.
+
 3.96 (2012-09-06)
 -----------------
 
