--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 karl package Changelog
 ======================
 
+Unreleased
+----------
+- make tag portlet label use the correct name or my tags, depending on
+  viewed profile.
+
 3.96 (2012-09-06)
 -----------------
 
