--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 karl package Changelog
 ======================
 
+Unreleased
+----------
+
+- Add rss and email icoins to blog view.
+
 3.96 (2012-09-06)
 -----------------
 
