--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 karl package Changelog
 ======================
 
+Unreleased
+----------
+
+- Add correct Office 2010 format mime types to multiupload.
+
 3.96 (2012-09-06)
 -----------------
 
