--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 karl package Changelog
 ======================
 
+Unreleased
+----------
+
+- Applied new skin to  not found view
+
 3.96 (2012-09-06)
 -----------------
 
