--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,6 +7,9 @@ Unreleased
 - Implement a slickgrid based solution for the Tabular view of the ux2 People grid. 
   This eliminates pagination on People Tabular reports. (LP #1046463)
 
+- In the Files (slick) grid, in ux2 only, decrease the width of the Type (mimetype) field
+  to smaller, just enough to accomodate the Type label in the column header.
+
 3.96 (2012-09-06)
 -----------------
 
