Fixed date formats (EU / US) in the profile page, in the Created column of the Content Added Recently grid. (LP #1057068)

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 karl package Changelog
 ======================
 
+Unreleased
+----------
+
+- Fixed date formats (EU / US) in the profile page, in the Created
+  column of the Content Added Recently grid. (LP #1057068)
+
 3.98 (2012-09-26)
 -----------------
 
