--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 karl package Changelog
 ======================
 
+Unreleased
+----------
+
+- in the ux2 content feeds filter box, make the green button work correctly on IE8.
+  Also, adjust the green button's position and height to look nice
+  on all browsers. (LP #1050493)
+
 3.97 (2012-09-14)
 -----------------
 
