--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 karl package Changelog
 ======================
 
+Unreleased
+----------
+
+- Made my tags portlet similar in style to other site portlets (LP #1053626).
+
 3.98 (2012-09-26)
 -----------------
 
