--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -18,6 +18,9 @@ Unreleased
   Also, adjust the green button's position and height to look nice
   on all browsers. (LP #1050493)
 
+- Fix livesearch results formatting in ux2, which became messed up
+  because the css loading sequence has changed. (LP #1067878)
+
 3.98 (2012-09-26)
 -----------------
 
