--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -28,6 +28,15 @@ Unreleased
 - Fix livesearch results formatting in ux2, which became messed up
   because the css loading sequence has changed. (LP #1067878)
 
+- Fix the position of the option panel in the UX2 wiki index (LP #1057067)
+
+- Implement left-right chevrons in the option panel toggle button 
+  in the UX2 wiki index (LP #1057067)
+
+- karl.wikitoc.js is now forked to two separate copies for ux1 and ux2
+  (just like all other js, in accordance with our best practice)
+
+
 3.98 (2012-09-26)
 -----------------
 
