--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ karl package Changelog
 Unreleased
 ----------
 
+- Fixed word wrap problem in recent activity portlet. (LP #1057065)
+
 - Fixed date formats (EU / US) in the profile page, in the Created
   column of the Content Added Recently grid. (LP #1057068)
 
