--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,7 +12,7 @@ Unreleased
 - Fixed word wrap problem in recent activity portlet. (LP #1057065)
 
 - Removed intranets link from global nav and made logo link to that when
-  inside an intranet.
+  inside an intranet. (LP #1053624).
 
 3.100 (2012-11-15)
 ------------------
