--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,9 @@ karl package Changelog
 Unreleased
 ----------
 
-- Fixed bug in profile display introduced by new Chrome version. (LP #1078319)
+- Fixed bug in profile display introduced by new Chrome version.
+  (LP #1078319)
+
 - Migrate admin section to ux2 (LP #1043537).
 
 - Avoid error when reference manual marker is removed from a folder and an
