--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 karl package Changelog
 ======================
 
+Unreleased
+----------
+
+- Make sure generate_stats script calls set_current_instance. (LP #1067453)
+
 3.101 (2012-11-20)
 ------------------
 
