--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 karl package Changelog
 ======================
 
+Unreleased
+----------
+
+- Remove old tinymce version 3.3.9.2 from the codebase.
+
+- Remove experimental desktop file synchronization feature.
+
 3.105 (2012-12-07)
 ------------------
 
