--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,6 +8,10 @@ Unreleased
 
 - Remove experimental desktop file synchronization feature.
 
+- Convert GSSErrors due to invalid tickets (some Oxfam browsers send NTLM 
+  tickets) from errors to warnings in the log to prevent firing off spurious
+  alarms.
+
 3.105 (2012-12-07)
 ------------------
 
