Note change for this branch.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 karl package Changelog
 ======================
 
+Unreleased
+----------
+
+- Convert profiles' '_pending_alerts' to conflict-free
+  'appendonly.Accumulator'. (LP #1122349)
+
 3.106 (2013-02-13)
 ------------------
 
