--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 karl package Changelog
 ======================
 
+(Unreleased)
+------------
+
+- Bump contentfeeds buffer from 1000 to 5000 items. (LP #1100421).
+
 3.106 (2013-02-13)
 ------------------
 
