Include BCC'ed targets when processing mail-in
E.g., from Exchange "distribution groups"

Part of fix for LP #1206974 -- the remainder is in 'repoze.postoffice'.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 karl package Changelog
 ======================
 
+Unreleased
+----------
+
+- Include BCC'ed targets when processing mail-in (e.g., from Exchange
+  "distribution groups" (LP #1206974).
+
 3.109 (2013-07-26)
 ------------------
 
