Prevent broken profile photo from breaking livesearch.
Fixes LP #1218026.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 karl package Changelog
 ======================
 
+Unreleased
+----------
+
+- Prevent broken profile photo from breaking livesearch (LP #1218026).
+
 3.113 (2013-08-23)
 ------------------
 
