--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,9 +6,11 @@ karl package Changelog
 
 - Added a perfmetrics call recording rendering duration for HTML requests
   (the same duration reported in HTML by 'karl.timeit').
+  See https://bugs.launchpad.net/karl3/+bug/1302125
 
-- Stop caching extrated text (the '_extracted_data' attribute) for files.
+- Stop caching extracted text (the '_extracted_data' attribute) for files.
   Add a script to remove the cached data from existing instances.
+  See https://bugs.launchpad.net/karl3/+bug/1309688
 
 - Add a warning which includes the current path when file conversion fails.
   See https://bugs.launchpad.net/karl3/+bug/1274114
