--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,12 +4,14 @@ karl package Changelog
 Unreleased
 ----------
 
-- Added hostname to redis log entries. (LP #1313775).
+- Added hostname to redis log entries.  See
+  https://bugs.launchpad.net/karl3/+bug/1313775
 
 - Don't show an Attachments heading on calendar event view if there are
-  no attachments. (LP #1305286)
+  no attachments.  See https://bugs.launchpad.net/karl3/+bug/1305286
 
-- Change the max size on images from 530x530 to 640x640 (LP #1304628)
+- Change the max size on images from 530x530 to 640x640.
+  See https://bugs.launchpad.net/karl3/+bug/1304628
 
 3.121 (2014-04-21)
 ------------------
