--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 karl package Changelog
 ======================
 
+Next release
+------------
+
+- Fix an issue where Unicode headers will be sent. See
+  https://bugs.launchpad.net/karl3/+bug/1337812 .
+
 3.124 (2014-07-03)
 ------------------
 
