--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,14 @@
 karl package Changelog
 ======================
 
+Unreleased
+----------
+
+- Reinstated the extracted text cache used by the text index for file data.  
+  Made the extracted text Persistent so it won't be loaded in RAM during normal
+  operation.  The extracted text is also limited to 256kb in size and stored
+  using gzip compression to minimize impact on database size. (LP #1340295)
+  
 3.130 (2014-08-07)
 ------------------
 
