--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 karl package Changelog
 ======================
 
+3.137.1 (2014-10-02)
+--------------------
+
+- Brownbag release to fix resources.json not getting included in egg
+
 3.137 (2014-09-27)
 ------------------
 
