--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,10 @@ karl package Changelog
 
 - Show a warning for browsers IE8 and less (LP #1351893)
 
+- Last Move To fixes (slug/de-slug starting at 200th item) (LP #1347066)
+
+- Third round of gulpification (LP #1374575)
+
 4.1 (2014-10-05)
 ----------------
 
