get changelog style right

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,8 +5,7 @@ Next release
 ------------
 
 - Ensure that NotFound/HTTPNotFound/ReadOnlyError causes 
-  ``karl.errorpage.errorpage`` view to be invoked as per 
-  https://bugs.launchpad.net/karl4/+bug/1418227
+  ``karl.errorpage.errorpage`` view to be invoked (LP #1418227)
 
 4.5 (2014-11-28)
 ----------------
