Reduce the amount of text that gets indexed. Prefix searches wind up hitting a lot of TOAST values for ranking, which reads 500 MB from disk on every search.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 karl package Changelog
 ======================
 
+Unreleased
+----------
+
+- Lower the upper length of the amount of text that KARL indexes, to
+  keep it within the TOAST limit of 250 Kb.
+
 4.6.1
 -----
 
