IE11 and 12 use, of course, a different UA string. Fix the detector that shows the bad browser message, then re-run gulp install. LP #1469302.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 karl package Changelog
 ======================
 
+Unreleased
+----------
+
+- The bad browser message had a detect user agent function that didn't
+  support IE11+ (including Edge). (LP #1469302)
+
 4.8 (2015-06-21)
 ----------------
 
