--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,6 +10,8 @@ Unreleased
 - Increase LiveSearch threshold on keypress buffering to 0.8 seconds.
   (LP #1477886)
 
+- Only KarlAdmin can see the link to the tag listing. (LP #1472765)
+
 4.9 (2015-07-04)
 ----------------
 
