--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,7 +12,7 @@ Unreleased
 
 - Only KarlAdmin can see the link to the tag listing. (LP #1472765)
 
-- Revert some of Shane's LiveSearch work until grouping works again.
+- Fix the LiveSearch duplication by filtering the groupings correctly.
   (LP #1472762)
 
 4.9 (2015-07-04)
