--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 karl package Changelog
 ======================
 
+4.12.3 (2015-11-14)
+===================
+
+- Correctly encode ndash (LP #1448252)
+
 4.12.2 (2015-11-13)
 ===================
 
