--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,13 +1,15 @@
 karl package Changelog
 ======================
 
-Unreleased
-==========
+4.12.4 (2015-12-18)
+===================
 
 - Profile Formatting Broken When You Insert Max Size Image
   (LP #1353034)
 
 - Refactor and cleanup login_view (LP #1516075)
+
+- Duplicate Title Error on Wiki Page Edit (LP #1521326)
 
 4.12.3 (2015-11-14)
 ===================
