Put "Username" in the correct place (form constructor).

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 karl package Changelog
 ======================
 
+4.17.1 (2016-08-19)
+===================
+
+- Put "Username" in the correct place
+
 4.17 (2016-08-19)
 =================
 
