--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 karl package Changelog
 ======================
 
+4.17.2 (2016-08-23)
+===================
+
+- Get correct URL in the password reset email
+
+
 4.17.1 (2016-08-19)
 ===================
 
