--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 karl package Changelog
 ======================
 
+4.18.1 (2016-09-13)
+===================
+
+- Brown-bag missing template
+
 4.18 (2016-09-13)
 =================
 
