--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,16 @@
 karl package Changelog
 ======================
 
+4.19 (2016-10-05)
+=================
+
+- Expire passwords (LP #1613274)
+
+- Increase password complexity (LP #1613265)
+
+- Maintain a password history to avoid re-using an old password
+  (LP #1613266)
+
 4.18.1 (2016-09-13)
 ===================
 
