Brown bag on the previous fix.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 karl package Changelog
 ======================
 
+4.23.2 (2016-12-22)
+===================
+
+- Brown bag on the previous fix
+
 4.23.1 (2016-12-22)
 ===================
 
